# faiss-serving

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
protos/: CMakeLists.txt  index.proto
src/: CMakeLists.txt  index_service.cc  index_service.h  main.cc
test/: CMakeLists.txt  test_index_service.cc
